--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,8 +1,8 @@
-@import 'components/header-pozishin.scss';
+@import 'components/header-pozishin';
 @import 'components/logo';
-@import 'components/site-nav.scss';
-@import 'components/site-contact.scss';
-@import 'components/hero.scss';
+@import 'components/site-nav';
+@import 'components/site-contact';
+@import 'components/hero';
 @import 'components/company-description';
 @import 'components/what-we-do';
 @import 'components/our-team';
