--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -1,5 +1,6 @@
+@import 'components/header-pozishin';
 @import 'components/logo';
-@import 'components/site-nav.scss';
-@import 'components/site-contact.scss';
+@import 'components/site-nav';
+@import 'components/site-contact';
 @import 'components/portfolio-choice-section';
 @import 'components/footer';
