--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -1,3 +1,6 @@
+@import 'utils/visually-hidden';
+
+@import 'base/common';
 @import 'components/header-pozishin';
 @import 'components/logo';
 @import 'components/site-nav';
