--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -13,21 +13,6 @@
   overflow: hidden;
 }
 
-:root {
-  --primary-text-color: #212121;
-  --secondary-text-color: #757575;
-  --accent-color: #2196f3;
-}
-
-/* primary text color #212121 */
-/* secondary text #757575 */
-/* background color #E5E5E5 */
-body {
-  font-family: Roboto, sans-serif;
-  font-weight: 400;
-  color: var(--primary-text-color);
-}
-
 a {
   text-decoration: none;
   color: inherit;
@@ -137,8 +122,7 @@ ul {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.site-nav__link:hover,
-.site-nav__link:focus {
+.site-nav__link:hover, .site-nav__link:focus {
   color: var(--accent-color);
 }
 
@@ -155,8 +139,7 @@ ul {
   opacity: 0;
 }
 
-.site-nav__link:hover::after,
-.site-nav__link:focus::after {
+.site-nav__link:hover::after, .site-nav__link:focus::after {
   opacity: 1;
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -203,8 +186,7 @@ ul {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact__link:hover,
-.contact__link:focus {
+.contact__link:hover, .contact__link:focus {
   color: var(--accent-color);
 }
 
@@ -247,8 +229,7 @@ ul {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.filter__button:hover,
-.filter__button:focus {
+.filter__button:hover, .filter__button:focus {
   background-color: var(--accent-color);
   color: #ffffff;
   -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -305,8 +286,7 @@ ul {
   display: block;
 }
 
-.option-list__link:hover,
-.option-list__link:focus {
+.option-list__link:hover, .option-list__link:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -461,13 +441,12 @@ ul {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-social-list__icons {
+.footer-social-list__link:hover, .footer-social-list__link:focus {
+  background-color: var(--accent-color);
   fill: #ffffff;
 }
 
-.footer-social-list__link:hover,
-.footer-social-list__link:focus {
-  background-color: var(--accent-color);
+.footer-social-list__icons {
   fill: #ffffff;
 }
 
