--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -4,11 +4,11 @@
   padding-bottom: 60px;
 
   background-color: #2f303a;
-}
 
-.footer__conteiner {
-  display: flex;
-  align-items: center;
+  &__conteiner {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .address {
@@ -34,10 +34,10 @@
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.mail:hover,
-.tell:hover {
-  color: var(--accent-color);
+
+  &:hover {
+    color: var(--accent-color);
+  }
 }
 
 .slogan__container {
@@ -71,17 +71,18 @@
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+    fill: #ffffff;
+  }
 }
 
 .footer-social-list__icons {
   fill: #ffffff;
 }
 
-.footer-social-list__link:hover,
-.footer-social-list__link:focus {
-  background-color: var(--accent-color);
-  fill: #ffffff;
-}
 .footer-social-list__item + .footer-social-list__item {
   margin-left: 10px;
 }
@@ -114,16 +115,16 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background: #2f303a;
-}
 
-.subsribe__input::placeholder {
-  font-family: Roboto, sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
-  letter-spacing: 0.03em;
+  &::placeholder {
+    font-family: Roboto, sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
 
-  color: rgba(255, 255, 255, 0.6);
+    color: rgba(255, 255, 255, 0.6);
+  }
 }
 
 .subsribe-form__conteiner {
