--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -56,10 +56,10 @@
 
   transform: scaleX(1) scaleY(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.order-button:hover,
-.order-button:focus {
-  background-color: var(--accent-color);
-  transform: scaleX(1.05) scaleY(1.05);
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+    transform: scaleX(1.05) scaleY(1.05);
+  }
 }
