--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -51,16 +51,17 @@
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
+
+  &:hover,
+  &:focus {
+    fill: var(--accent-color);
+  }
 }
 
 .close-modal-button__icon {
   display: block;
 }
 
-.close-modal-button:hover,
-.close-modal-button:focus {
-  fill: var(--accent-color);
-}
 /*=== form === */
 
 .form__title {
@@ -80,28 +81,39 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
-}
 
-.modal-form__field label {
-  margin-bottom: 4px;
-  font-family: Roboto, sans-serif;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.01em;
+  & label {
+    margin-bottom: 4px;
+    font-family: Roboto, sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
 
-  color: #757575;
-}
+    color: #757575;
+  }
 
-.input:focus,
-.input:hover {
-  outline: none;
-  border-color: #2196f3;
-}
+  & input {
+    height: 40px;
+    padding: 11px 12px;
+    padding-left: 42px;
 
-.input:focus + .input__icon,
-.input:hover + .input__icon {
-  fill: var(--accent-color);
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+  }
+
+  & textarea {
+    min-height: 120px;
+    padding: 12px 16px;
+    resize: none;
+
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+
+    &::placeholder {
+      color: rgba(117, 117, 117, 0.5);
+    }
+  }
 }
 
 .input__vraper {
@@ -112,6 +124,17 @@
 .input {
   cursor: pointer;
   width: 100%;
+
+  &:focus,
+  &:hover {
+    outline: none;
+    border-color: #2196f3;
+  }
+
+  &:focus + .input__icon,
+  &:hover + .input__icon {
+    fill: var(--accent-color);
+  }
 }
 
 .input__icon {
@@ -124,29 +147,7 @@
   transform: translateY(-50%);
 }
 
-.modal-form__field input {
-  height: 40px;
-  padding: 11px 12px;
-  padding-left: 42px;
-
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-}
-
-.modal-form__field textarea {
-  min-height: 120px;
-  padding: 12px 16px;
-  resize: none;
-
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-}
-
-.modal-form__field textarea::placeholder {
-  color: rgba(117, 117, 117, 0.5);
-}
-
-.__-policy {
+.checkbox__policy {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -167,21 +168,21 @@
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
+
+  &::before {
+    margin-right: 8px;
+    content: '';
+    display: inline-flex;
+    width: 16px;
+    height: 15px;
+    border-radius: 2px;
+    background-image: url(../Images/icons/checkbox-border.svg);
+  }
 }
 
 .checkbox__input:checked + .checkbox__label::before {
   background-color: var(--accent-color);
   background-image: url(../Images/icons/iconcheck.svg);
-}
-
-.checkbox__label::before {
-  margin-right: 8px;
-  content: '';
-  display: inline-flex;
-  width: 16px;
-  height: 15px;
-  border-radius: 2px;
-  background-image: url(../Images/icons/checkbox-border.svg);
 }
 
 .submit-button {
@@ -205,9 +206,9 @@
   color: #ffffff;
   background: #2196f3;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.submit-button:hover,
-.submit-button:focus {
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  &:hover,
+  &:focus {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  }
 }
