--- a/sass/components/_our-clients.scss
+++ b/sass/components/_our-clients.scss
@@ -40,10 +40,10 @@
   fill: #afb1b8;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.client-list__link:hover,
-.client-list__link:focus {
-  border-color: var(--accent-color);
-  fill: var(--accent-color);
+  &:hover,
+  &:focus {
+    border-color: var(--accent-color);
+    fill: var(--accent-color);
+  }
 }
