--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -45,12 +45,12 @@
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.our-team-icon__link:hover,
-.our-team-icon__link:focus {
-  background-color: var(--accent-color);
-  fill: #ffffff;
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+    fill: #ffffff;
+  }
 }
 
 .our-team__images,
