--- a/sass/components/_portfolio-choice-section.scss
+++ b/sass/components/_portfolio-choice-section.scss
@@ -23,14 +23,14 @@
   background-color: #f5f4fa;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.filter__button:hover,
-.filter__button:focus {
-  background-color: var(--accent-color);
-  color: #ffffff;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+    color: #ffffff;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
 }
 
 .button-list__item + .button-list__item {
@@ -63,24 +63,24 @@
   min-width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
-}
 
-.option-list__items:nth-child(3n) {
-  margin-right: 0px;
-}
+  &:nth-child(3n) {
+    margin-right: 0px;
+  }
 
-.option-list__items:nth-last-child(-n + 3) {
-  margin-bottom: 0px;
+  &:nth-last-child(-n + 3) {
+    margin-bottom: 0px;
+  }
 }
 
 .option-list__link {
   display: block;
-}
 
-.option-list__link:hover,
-.option-list__link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+  &:hover,
+  &:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 
 .option-list__text {
@@ -105,11 +105,11 @@
   background: rgba(33, 150, 243, 0.9);
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.option-list__link:hover .option-list__text,
-.option-list__link:focus .option-list__text {
-  transform: translateY(0%);
+  .option-list__link:hover &,
+  .option-list__link:focus & {
+    transform: translateY(0%);
+  }
 }
 
 .option__description {
