--- a/sass/components/_site-contact.scss
+++ b/sass/components/_site-contact.scss
@@ -16,11 +16,11 @@
   align-items: center;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.contact__link:hover,
-.contact__link:focus {
-  color: var(--accent-color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
 .site-contact__item + .site-contact__item {
