--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -16,44 +16,44 @@
   padding-top: 32px;
   padding-bottom: 32px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.site-nav__link:hover,
-.site-nav__link:focus {
-  color: var(--accent-color);
-}
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 
-.site-nav__link::after {
-  content: '';
-  display: block;
-  position: absolute;
-  left: 0px;
-  bottom: -1px;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--accent-color);
-  opacity: 0;
-}
+  &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0px;
+    bottom: -1px;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
+    opacity: 0;
+  }
 
-.site-nav__link:hover::after,
-.site-nav__link:focus::after {
-  opacity: 1;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover::after,
+  &:focus::after {
+    opacity: 1;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .current {
   color: var(--accent-color);
-}
 
-.current::before {
-  content: '';
-  display: block;
-  position: absolute;
-  left: 0px;
-  bottom: -1px;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--accent-color);
+  &::before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0px;
+    bottom: -1px;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--accent-color);
+  }
 }
